--- a/kube-prometheus-stack/charts/crds/crds/crd-prometheusagents.yaml
+++ b/kube-prometheus-stack/charts/crds/crds/crd-prometheusagents.yaml
@@ -4,6 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
+    argocd.argoproj.io/sync-options: ServerSideApply=true
     controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
   name: prometheusagents.monitoring.coreos.com
